--- a/css/floodmap.css
+++ b/css/floodmap.css
@@ -1,9 +1,4 @@
 div #map-canvas {
-    height: 600px;
-    width: 600px;
-    /*background-color: green;*/
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -o-border-radius: 50px;
-    border-radius: 50px;
+    min-height: 600px;
+    width: 100%;
 }
